--- a/testRabbitMQ.ini
+++ b/testRabbitMQ.ini
@@ -1,11 +1,11 @@
-[testServer]
-BROKER_HOST = 127.0.0.1
+[DMZServer]
+BROKER_HOST = 172.30.247.140
 BROKER_PORT = 5672
 USER = test
 PASSWORD = test
 VHOST = testHost
-EXCHANGE = testExchange
-QUEUE = testQueue
+EXCHANGE = DMZconnection
+QUEUE = DMZresponse
 ;EXCHANGE_TYPE = ????
-AUTO_DELETE = true
+;AUTO_DELETE = true
 
