updated error logging

--- a/errorServer.ini
+++ b/errorServer.ini
@@ -1,11 +1,11 @@
-[errorLogging]
+[errorServer]
 BROKER_HOST = 172.30.247.140
 BROKER_PORT = 5672
 USER = test
 PASSWORD = test
 VHOST = testHost
-EXCHANGE = errors
-QUEUE = DMZerrorresponse
+EXCHANGE = ErrorLogging
+QUEUE = DMZerrors
 ;EXCHANGE_TYPE = ????
 ;AUTO_DELETE = true
 
