Separated DMZ into bundles

--- a/error_log/errorServerMQ.ini
+++ b/error_log/errorServerMQ.ini
@@ -1,11 +1,10 @@
 [errorServer]
-BROKER_HOST = 172.30.247.140
+BROKER_HOST = rabbit_host
 BROKER_PORT = 5672
 USER = test
 PASSWORD = test
 VHOST = testHost
 EXCHANGE = ErrorLogging
-QUEUE = DMZerrors
+QUEUE = %(ERROR_QUEUE)s
 ;EXCHANGE_TYPE = ????
-;AUTO_DELETE = true
-
+;AUTO_DELETE = false
